--- a/dependencies.html
+++ b/dependencies.html
@@ -37,7 +37,7 @@
           <ul class="nav">      
                     
           <li id="publishDate">Last Published: 31 August 2020</li>
-    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0-SNAPSHOT</li>
+    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0</li>
   </ul>
           <div class="pull-right">  <ul class="nav">
             <li>
@@ -243,7 +243,7 @@
 <a name="Dependency_Tree"></a><section>
 <h3><a name="Dependency_Tree"></a>Dependency Tree</h3>
 <ul>
-<li>it.serendigity.maven.parent:sndp-public-base-parent:pom:0.2.0-SNAPSHOT <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep0" style="display:none">
+<li>it.serendigity.maven.parent:sndp-public-base-parent:pom:0.2.0 <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep0" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Basic parent pom for maven build configuration</th></tr>
