--- a/dependency-info.html
+++ b/dependency-info.html
@@ -37,7 +37,7 @@
           <ul class="nav">      
                     
           <li id="publishDate">Last Published: 31 August 2020</li>
-    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0-SNAPSHOT</li>
+    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0</li>
   </ul>
           <div class="pull-right">  <ul class="nav">
             <li>
@@ -136,31 +136,31 @@
 <pre>&lt;dependency&gt;
   &lt;groupId&gt;it.serendigity.maven.parent&lt;/groupId&gt;
   &lt;artifactId&gt;sndp-public-base-parent&lt;/artifactId&gt;
-  &lt;version&gt;0.2.0-SNAPSHOT&lt;/version&gt;
+  &lt;version&gt;0.2.0&lt;/version&gt;
   &lt;type&gt;pom&lt;/type&gt;
 &lt;/dependency&gt;</pre></div></section><section>
 <h3><a name="Apache_Buildr"></a>Apache Buildr</h3><a name="Apache_Buildr"></a>
 <div class="source">
-<pre>'it.serendigity.maven.parent:sndp-public-base-parent:pom:0.2.0-SNAPSHOT'</pre></div></section><section>
+<pre>'it.serendigity.maven.parent:sndp-public-base-parent:pom:0.2.0'</pre></div></section><section>
 <h3><a name="Apache_Ivy"></a>Apache Ivy</h3><a name="Apache_Ivy"></a>
 <div class="source">
-<pre>&lt;dependency org=&quot;it.serendigity.maven.parent&quot; name=&quot;sndp-public-base-parent&quot; rev=&quot;0.2.0-SNAPSHOT&quot;&gt;
+<pre>&lt;dependency org=&quot;it.serendigity.maven.parent&quot; name=&quot;sndp-public-base-parent&quot; rev=&quot;0.2.0&quot;&gt;
   &lt;artifact name=&quot;sndp-public-base-parent&quot; type=&quot;pom&quot; /&gt;
 &lt;/dependency&gt;</pre></div></section><section>
 <h3><a name="Groovy_Grape"></a>Groovy Grape</h3><a name="Groovy_Grape"></a>
 <div class="source">
 <pre>@Grapes(
-@Grab(group='it.serendigity.maven.parent', module='sndp-public-base-parent', version='0.2.0-SNAPSHOT')
+@Grab(group='it.serendigity.maven.parent', module='sndp-public-base-parent', version='0.2.0')
 )</pre></div></section><section>
 <h3><a name="Gradle.2FGrails"></a>Gradle/Grails</h3><a name="Gradle.2FGrails"></a>
 <div class="source">
-<pre>compile 'it.serendigity.maven.parent:sndp-public-base-parent:0.2.0-SNAPSHOT'</pre></div></section><section>
+<pre>compile 'it.serendigity.maven.parent:sndp-public-base-parent:0.2.0'</pre></div></section><section>
 <h3><a name="Scala_SBT"></a>Scala SBT</h3><a name="Scala_SBT"></a>
 <div class="source">
-<pre>libraryDependencies += &quot;it.serendigity.maven.parent&quot; % &quot;sndp-public-base-parent&quot; % &quot;0.2.0-SNAPSHOT&quot;</pre></div></section><section>
+<pre>libraryDependencies += &quot;it.serendigity.maven.parent&quot; % &quot;sndp-public-base-parent&quot; % &quot;0.2.0&quot;</pre></div></section><section>
 <h3><a name="Leiningen"></a>Leiningen</h3><a name="Leiningen"></a>
 <div class="source">
-<pre>[it.serendigity.maven.parent/sndp-public-base-parent &quot;0.2.0-SNAPSHOT&quot;]</pre></div></section></section>
+<pre>[it.serendigity.maven.parent/sndp-public-base-parent &quot;0.2.0&quot;]</pre></div></section></section>
                       </td>
         </tr>
       </table>
