--- a/issue-management.html
+++ b/issue-management.html
@@ -37,7 +37,7 @@
           <ul class="nav">      
                     
           <li id="publishDate">Last Published: 31 August 2020</li>
-    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0-SNAPSHOT</li>
+    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0</li>
   </ul>
           <div class="pull-right">  <ul class="nav">
             <li>
