--- a/licenses.html
+++ b/licenses.html
@@ -37,7 +37,7 @@
           <ul class="nav">      
                     
           <li id="publishDate">Last Published: 31 August 2020</li>
-    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0-SNAPSHOT</li>
+    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0</li>
   </ul>
           <div class="pull-right">  <ul class="nav">
             <li>
@@ -183,7 +183,7 @@
     <div class="form-item form-type-textfield form-item-search-block-form">
  <input onblur="if (this.value == &#039;&#039;) {this.value = &#039;Search this website...&#039;;}" onfocus="if (this.value == &#039;Search this website...&#039;) {this.value = &#039;&#039;;}" type="text" id="edit-search-block-form--2" name="search_block_form" value="Search this website..." size="15" maxlength="128" class="form-text" />
 </div>
-<div class="form-actions form-wrapper" id="edit-actions"><input value="" type="submit" id="edit-submit" name="op" class="form-submit" /></div><input type="hidden" name="form_build_id" value="form-9KQp9cCSikZbVE0i2nCMKKxg3c6W2MsrrZy5LEUiRcQ" />
+<div class="form-actions form-wrapper" id="edit-actions"><input value="" type="submit" id="edit-submit" name="op" class="form-submit" /></div><input type="hidden" name="form_build_id" value="form--6jl_MeOxj1u1eCZjkNgCbalL7-PyXj_h4RUXC8ToRM" />
 <input type="hidden" name="form_id" value="search_block_form" />
 </div>
 </div></form>  </div>
