--- a/summary.html
+++ b/summary.html
@@ -37,7 +37,7 @@
           <ul class="nav">      
                     
           <li id="publishDate">Last Published: 31 August 2020</li>
-    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0-SNAPSHOT</li>
+    <li class="divider">|</li> <li id="projectVersion">Version: 0.2.0</li>
   </ul>
           <div class="pull-right">  <ul class="nav">
             <li>
@@ -169,7 +169,7 @@
 <td>sndp-public-base-parent</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>0.2.0-SNAPSHOT</td></tr>
+<td>0.2.0</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>pom</td></tr></table></section></section>
