--- a/dependency-management.html
+++ b/dependency-management.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
                     <meta name="Date-Revision-yyyymmdd" content="20200902" />
             <meta http-equiv="Content-Language" content="en" />
-        <title>Apache Commons &#x2013; CI Management</title>
+        <title>Apache Commons &#x2013; Project Dependency Management</title>
 
     <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="./css/site.css" type="text/css" />
@@ -63,7 +63,7 @@
                   <a href="project-info.html" title="Project Information">
     Project Information</a>
                     <ul>
-                                <li class="none active">
+                              <li class="none">
                   <a href="ci-management.html" title="CI Management">
     CI Management</a>
           </li>
@@ -75,7 +75,7 @@
                   <a href="dependency-info.html" title="Dependency Information">
     Dependency Information</a>
           </li>
-                                 <li class="none">
+                                   <li class="none active">
                   <a href="dependency-management.html" title="Dependency Management">
     Dependency Management</a>
           </li>
@@ -134,14 +134,22 @@
           </td>
           <td class="content">
                                                                           <section>
-<h2><a name="Overview"></a>Overview</h2><a name="Overview"></a>
-<p>This project uses <a class="externalLink" href="https://travis-ci.org/">Travis CI</a>.</p></section><section>
-<h2><a name="Access"></a>Access</h2><a name="Access"></a>
-<p>The following is a link to the continuous integration system used by the project:</p>
-<div class="source">
-<pre><a class="externalLink" href="https://travis-ci.com/github/serendipity-projects/sndp-public-base-parent">https://travis-ci.com/github/serendipity-projects/sndp-public-base-parent</a></pre></div></section><section>
-<h2><a name="Notifiers"></a>Notifiers</h2><a name="Notifiers"></a>
-<p>No notifiers are defined. Please check back at a later date.</p></section>
+<h2><a name="Project_Dependency_Management"></a>Project Dependency Management</h2><a name="Project_Dependency_Management"></a><section>
+<h3><a name="test"></a>test</h3><a name="test"></a>
+<p>The following is a list of test dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile and run unit tests for the submodule:</p>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>GroupId</th>
+<th>ArtifactId</th>
+<th>Version</th>
+<th>Type</th>
+<th>License</th></tr>
+<tr class="b">
+<td>nl.jqno.equalsverifier</td>
+<td><a class="externalLink" href="http://www.jqno.nl/equalsverifier">equalsverifier</a></td>
+<td>3.4.2</td>
+<td>jar</td>
+<td><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a></td></tr></table></section></section>
                       </td>
         </tr>
       </table>
