--- a/sonarcloud.html
+++ b/sonarcloud.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
                     <meta name="Date-Revision-yyyymmdd" content="20200902" />
             <meta http-equiv="Content-Language" content="en" />
-        <title>Apache Commons &#x2013; CI Management</title>
+        <title>Apache Commons &#x2013; SonarCloud</title>
 
     <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="./css/site.css" type="text/css" />
@@ -59,68 +59,24 @@
                  </ul>
       <ul class="nav nav-list">
                                  <li class="nav-header"><i class="icon-info-sign"></i>Project Documentation</li>
-                                                                                                                                                                                                                                                                                                                            <li class="expanded">
+                                                                                                                                                                                                                                                                                                                  <li class="collapsed">
                   <a href="project-info.html" title="Project Information">
     Project Information</a>
+                    </li>
+                                                                                                           <li class="expanded">
+                  <a href="project-reports.html" title="Project Reports">
+    Project Reports</a>
                     <ul>
-                                <li class="none active">
-                  <a href="ci-management.html" title="CI Management">
-    CI Management</a>
+                              <li class="none">
+                  <a href="surefire-report.html" title="Surefire Report">
+    Surefire Report</a>
           </li>
-                                 <li class="none">
-                  <a href="dependencies.html" title="Dependencies">
-    Dependencies</a>
-          </li>
-                                 <li class="none">
-                  <a href="dependency-info.html" title="Dependency Information">
-    Dependency Information</a>
-          </li>
-                                 <li class="none">
-                  <a href="dependency-management.html" title="Dependency Management">
-    Dependency Management</a>
-          </li>
-                                 <li class="none">
-                  <a href="distribution-management.html" title="Distribution Management">
-    Distribution Management</a>
-          </li>
-                                 <li class="none">
-                  <a href="index.html" title="About">
-    About</a>
-          </li>
-                                 <li class="none">
-                  <a href="issue-management.html" title="Issue Management">
-    Issue Management</a>
-          </li>
-                                 <li class="none">
-                  <a href="licenses.html" title="Licenses">
-    Licenses</a>
-          </li>
-                                 <li class="none">
-                  <a href="plugin-management.html" title="Plugin Management">
-    Plugin Management</a>
-          </li>
-                                 <li class="none">
-                  <a href="plugins.html" title="Plugins">
-    Plugins</a>
-          </li>
-                                 <li class="none">
-                  <a href="scm.html" title="Source Code Management">
-    Source Code Management</a>
-          </li>
-                                 <li class="none">
-                  <a href="summary.html" title="Summary">
-    Summary</a>
-          </li>
-                                 <li class="none">
-                  <a href="team.html" title="Team">
-    Team</a>
+                                   <li class="none active">
+                  <a href="sonarcloud.html" title="SonarCloud">
+    SonarCloud</a>
           </li>
                    </ul>
               </li>
-                                                                                                 <li class="collapsed">
-                  <a href="project-reports.html" title="Project Reports">
-    Project Reports</a>
-                    </li>
                  </ul>
               </div>
             <div id="poweredBy">
@@ -133,15 +89,7 @@
                       </div>
           </td>
           <td class="content">
-                                                                          <section>
-<h2><a name="Overview"></a>Overview</h2><a name="Overview"></a>
-<p>This project uses <a class="externalLink" href="https://travis-ci.org/">Travis CI</a>.</p></section><section>
-<h2><a name="Access"></a>Access</h2><a name="Access"></a>
-<p>The following is a link to the continuous integration system used by the project:</p>
-<div class="source">
-<pre><a class="externalLink" href="https://travis-ci.com/github/serendipity-projects/sndp-public-base-parent">https://travis-ci.com/github/serendipity-projects/sndp-public-base-parent</a></pre></div></section><section>
-<h2><a name="Notifiers"></a>Notifiers</h2><a name="Notifiers"></a>
-<p>No notifiers are defined. Please check back at a later date.</p></section>
+                                                                          <h2><a name="SonarCloud"></a>SonarCloud</h2>Redirecting to <a class="externalLink" href="https://sonarcloud.io/dashboard/index/it.serendigity.maven.parent:sndp-public-base-parent">https://sonarcloud.io/dashboard/index/it.serendigity.maven.parent:sndp-public-base-parent</a><script type='text/javascript'> window.location='https://sonarcloud.io/dashboard/index/it.serendigity.maven.parent:sndp-public-base-parent'</script>
                       </td>
         </tr>
       </table>
