--- a/dependencies.html
+++ b/dependencies.html
@@ -30,7 +30,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 26 May 2023<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 1.1.2-SNAPSHOT</li>
+          <li id="projectVersion">Version: 1.1.2</li>
         <li class="pull-right"><a href="https://www.serendigity.it/" class="externalLink" title="Serendipity">Serendipity</a></li>
           </ul>
         </div>
@@ -194,7 +194,7 @@
 <a id="Dependency_Tree"></a><section>
 <h2>Dependency Tree</h2>
 <ul>
-<li>it.serendigity.maven.parent:sndp-public-base-parent:pom:1.1.2-SNAPSHOT <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;" /><div id="_dep0" style="display:none">
+<li>it.serendigity.maven.parent:sndp-public-base-parent:pom:1.1.2 <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;" /><div id="_dep0" style="display:none">
 <table class="table table-striped">
 <tr class="a">
 <th>Basic parent pom for maven build configuration</th></tr>
