--- a/scm.html
+++ b/scm.html
@@ -30,7 +30,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 26 May 2023<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 1.1.2-SNAPSHOT</li>
+          <li id="projectVersion">Version: 1.1.2</li>
         <li class="pull-right"><a href="https://www.serendigity.it/" class="externalLink" title="Serendipity">Serendipity</a></li>
           </ul>
         </div>
