--- a/summary.html
+++ b/summary.html
@@ -30,7 +30,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 26 May 2023<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 1.1.2-SNAPSHOT</li>
+          <li id="projectVersion">Version: 1.1.2</li>
         <li class="pull-right"><a href="https://www.serendigity.it/" class="externalLink" title="Serendipity">Serendipity</a></li>
           </ul>
         </div>
@@ -114,7 +114,7 @@
 <td>sndp-public-base-parent</td></tr>
 <tr class="b">
 <td style="text-align: left;">Version</td>
-<td>1.1.2-SNAPSHOT</td></tr>
+<td>1.1.2</td></tr>
 <tr class="a">
 <td style="text-align: left;">Type</td>
 <td>pom</td></tr></table></section></section>
